# NIST_VASIR

./: CMakeLists.txt  README.md
Analysis/: CMakeLists.txt
MasekAlg/: CMakeLists.txt  gauss.cpp
VASIR/: CMakeLists.txt  EyeDetection.cpp  FindEyelidCurve.cpp  GetHammingDistance.cpp
YooIRIS/: CMakeLists.txt  ImageWidget.cpp  ImageWidget.h  YooIRIS.cpp  YooIRIS.pro
